--- a/HippoAndroid/app/src/main/res/values/strings.xml
+++ b/HippoAndroid/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <!--</string>-->
 
 
-    <string name="title_text">Hippo</string>
+    <string name="title_text">hippo</string>
 
     <string name="loading">Loading…</string>
     <string name="sign_out">Sign Out</string>
