Style for header bar color, lato font and font sizes

--- a/HippoAndroid/app/src/main/res/values/strings.xml
+++ b/HippoAndroid/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">HippoAndroid</string>
-    <string name="session_list_title">Session List</string>
+    <string name="session_list_title">Upcoming Sessions</string>
 </resources>
